# TrinetraAi-SIH-2025-Demo

./: docker-compose.yml  index.html  pyproject.toml
backend/: main.py  requirements.txt
backend/app/model/: technology.py
backend/app/services/: ai_analyzer.py  data_collector.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  Disclaimer.tsx  Navbar.tsx
frontend/src/services/: api.ts
